--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-media-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
